add prompt guide link

--- a/pages/getting-started/create-a-spell.mdx
+++ b/pages/getting-started/create-a-spell.mdx
@@ -3,8 +3,7 @@ title: Creating Your First Spell
 description: Learn how to create a simple spell in Magick
 ---
 
-Building your first spell in Magick is a straightforward process. In this guide, we'll walk through creating a simple spell that responds to incoming messages with generated text.
-
+Building your first spell in Magick is a straightforward process. In this guide, we'll walk through creating a simple spell that responds to incoming messages with generated text. If you need tips for great prompt engineering, check out this [Prompting Guide](https://www.promptingguide.ai/).
 ![Creating Your First Spell](/images/first-spell.png)
 ## Step 1: Add the "On Message" Node
 The first step is to add the "Magick/OnMessage" node from the "Event" category. This node will trigger the spell when a new message is received from the Test Panel.
